--- a/index.css
+++ b/index.css
@@ -112,7 +112,11 @@ header .title-logo {
   text-align: center;
   font-size: 2.5rem;
   font-weight: 700;
-  margin-bottom: 1.2rem;
+  margin-bottom: 2rem;
+}
+
+.main-logos {
+  margin-bottom: 2rem;
 }
 
 .subtitle {
@@ -124,19 +128,16 @@ header .title-logo {
   line-height: 2rem;
 }
 
-.button.primary {
-  background: linear-gradient(90deg, #66b6ea, #8743ff);
+.button {
   border-radius: 1.3em;
   box-shadow: 0 10px 30px 2px rgba(159, 191, 255, 0.4);
   mix-blend-mode: multiply;
   font-family: M PLUS rounded\1c, sans-serif;
   font-size: 16px;
-  color: #fff;
   display: inline-block;
   cursor: pointer;
   display: inline-block;
   outline: none;
-  border: none;
   vertical-align: baseline;
   padding: 0.9em 5em;
   text-transform: none;
@@ -148,11 +149,16 @@ header .title-logo {
   width: 20rem;
 }
 
+.button.primary {
+  color: #fff;
+  background: linear-gradient(90deg, #66b6ea, #8743ff);
+  border: none;
+}
+
 .button.secondary {
   color: #3d7aed;
   background: transparent;
   border: 1px solid #3d7aed;
-  width: 20rem;
 }
 
 .button.primary:hover {
@@ -167,6 +173,26 @@ header .title-logo {
   margin-top: 4rem;
   text-align: center;
   margin-bottom: 4rem;
+}
+
+.card {
+  border-radius: 1.3em;
+  box-shadow: 0 10px 30px 2px rgba(159, 191, 255, 0.4);
+  mix-blend-mode: multiply;
+  font-family: M PLUS rounded\1c, sans-serif;
+  font-size: 16px;
+  padding: 1em 2em;
+  margin-bottom: 2rem;
+}
+
+.card.secondary {
+  color: #3d7aed;
+  background: transparent;
+  border: 1px solid #3d7aed;
+}
+
+.card.secondary:hover {
+  background: #ecf2fd;
 }
 
 .icon-container-comp {
@@ -196,6 +222,10 @@ header .title-logo {
   color: rgba(3, 27, 78, 0.7);
   cursor: default;
   margin-right: 0.2rem;
+}
+
+.icon-comp.small i {
+  font-size: 1.5rem;
 }
 
 .icon-comp:hover i {
@@ -254,8 +284,50 @@ header .title-logo {
   color: #3d7aed;
   text-align: center;
   font-size: 0.8rem;
-  margin-bottom: 30px;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
+
+/* Avatars ----- */
+
+.authors {
+  display: flex;
+  align-items: center;
+}
+
+.authors .by {
+  margin-right: 10px;
+}
+
+.avatars {
+  display: flex;
+  margin-right: 5px;
+}
+
+.avatars a {
+  transition: transform 0.2s ease;
+}
+
+.avatars img {
+  transition: margin-left 0.2s ease;
+}
+
+.avatars a:hover {
+  transform: scale(1.3);
+}
+
+.avatars img {
+  display: inline-block;
+  border-radius: 50%;
+  margin-left: -10px;
+  border: 3px solid transparent;
+}
+
+.avatars:hover img {
+  margin-left: 1px;
+}
+
+/* Responsive ----- */
 
 @media (max-width: 500px) {
   .tech-exp,
